objects/Case_QA__c.object
<CustomObject>
    <description>RN - CloudSmiths - QA record saved by an agent against a specific case. VF page renders QA questions dynamically from the case QA template record for a specific business area. Updates are saved as metadata to this record and rendered by a VF page</description>
    <fields>
        <fullName>AgentName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Case_QA_s1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AgentScorePer__c</fullName>
        <formula>IF( FailedAuditRequirement__c , 0 , ( AgentScore__c / WeightingTotal__c ))</formula>
        <label>Agent Score %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AgentScore__c</fullName>
        <label>Agent Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DateSubmitted__c</fullName>
        <label>Date Submitted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateValidated__c</fullName>
        <label>Date Validated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FailedAuditRequirement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>RN - CloudSmiths 
If checked, the score should be 0%</description>
        <label>Failed Audit Requirement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PeerScorePer__c</fullName>
        <formula>( PeerScore__c / WeightingTotal__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Peer Score %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PeerScore__c</fullName>
        <label>Peer Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QAFromName__c</fullName>
        <formula>QATemplate__r.QAName__c</formula>
        <label>QA From Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QATemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>RN - CloudSmiths</description>
        <label>QA Template</label>
        <referenceTo>Case_QA_Template__c</referenceTo>
        <relationshipLabel>Case QA&apos;s</relationshipLabel>
        <relationshipName>QAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RelatedCase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case QA&apos;s</relationshipLabel>
        <relationshipName>QAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SavedResults__c</fullName>
        <description>RN - CloudSmiths - Saved results as metadata to be rendered by VF</description>
        <label>Saved Results</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SubmittedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submitted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Case_QA_s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Validate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WeightingTotal__c</fullName>
        <label>Weighting Total</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Case QA</label>
    <nameField>
        <displayFormat>QA-{000000000}</displayFormat>
        <label>Case QA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case QA&apos;s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>